<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="br.com.brunocarvalhs.costs.reader_cost.CostReaderViewModel" />
    </data>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".features.costs.reader_cost.CostReaderFragment">

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/form"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar3">

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="15dp"
                            android:hint="@string/textfield_name_hilt"
                            app:endIconDrawable="@drawable/ic_baseline_edit_24"
                            app:endIconMode="custom"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:startIconDrawable="@drawable/ic_baseline_doc_24">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@={viewModel.name}"
                                android:enabled="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/referring_month"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="15dp"
                            android:hint="@string/textfield_reference_month_hilt"
                            app:endIconDrawable="@drawable/ic_baseline_edit_24"
                            app:endIconMode="custom"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/name"
                            app:startIconDrawable="@drawable/ic_baseline_calendar_view_month_24">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@={viewModel.dateReferenceMonth}"
                                android:inputType="date"
                                android:enabled="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/prompt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="15dp"
                            android:hint="@string/textfield_prompt_hilt"
                            app:endIconDrawable="@drawable/ic_baseline_edit_24"
                            app:endIconMode="custom"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/referring_month"
                            app:startIconDrawable="@drawable/ic_baseline_prompt_24">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@={viewModel.prompt}"
                                android:inputType="date"
                                android:enabled="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="15dp"
                            android:hint="@string/textfield_value_hilt"
                            app:endIconDrawable="@drawable/ic_baseline_edit_24"
                            app:endIconMode="custom"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/prompt"
                            app:startIconDrawable="@drawable/ic_baseline_value_24">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@={viewModel.value}"
                                android:enabled="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/barcode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="15dp"
                            android:hint="@string/textfield_barcode_hilt"
                            app:endIconDrawable="@drawable/ic_baseline_content_copy_24"
                            app:endIconMode="custom"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/value"
                            app:startIconDrawable="@drawable/ic_baseline_barcode_24">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@={viewModel.barCode}"
                                android:enabled="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.bottomappbar.BottomAppBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="BottomAppBar"
                        android:id="@+id/bottomAppBar3">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/linearLayoutCompat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent">

                        <Button
                                android:id="@+id/update"
                                style="@style/Widget.Material3.Button.TextButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="8dp"
                                android:text="@string/fragment_cost_reader_button_update_text"
                                android:visibility="gone"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:visibility="visible" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.bottomappbar.BottomAppBar>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</layout>